refactor: implementation images

--- a/#src/components/vps/_advantages.html
+++ b/#src/components/vps/_advantages.html
@@ -5,98 +5,86 @@
             надежные серверные ресурсы по доступной цене. Свяжитесь с нами сегодня, чтобы узнать больше о наших услугах
             и подобрать оптимальный план для ваших нужд!</p>
         <div class="vps__advantages-section">
-            <div class="vps__advantages-column">
-                <div class="vps__advantages-items">
-                    <div class="vps__advantages-item">
-                        <img src="./../../img/vps/icons/Circuitry.svg" alt="circuitry">
-                        <div>
-                            <p>Intel Xeon E5-2670 v3 3.1 ГГц</p>
-                            <p>Intel Xeon E5-2630 v3 3.2 ГГц</p>
+            <div class="vps__advantages-block">
+                <div class="vps__advantages-row">
+                    <div class="vps__advantages-items">
+                        <div class="vps__advantages-item">
+                            <img src="./../../img/vps/icons/Circuitry.png" alt="Circuitry">
+                            <div>
+                                <p>Intel Xeon E5-2670 v3 3.1 ГГц</p>
+                                <p>Intel Xeon E5-2630 v3 3.2 ГГц</p>
+                            </div>
+                        </div>
+                        <span class="line"></span>
+                        <div class="vps__advantages-item">
+                            <h4>Мощные процессоры</h4>
+                            <span>Используем высокочастотные процессоры</span>
                         </div>
                     </div>
-                    <span class="line"></span>
-                    <div class="vps__advantages-item">
-                        <h4>Мощные процессоры</h4>
-                        <span>Используем высокочастотные процессоры</span>
-                    </div>
-                </div>
-                <div class="vps__advantages-items">
-                    <div class="vps__advantages-item">
-                        <img src="./../../img/vps/icons/Circuitry.svg" alt="circuitry">
-                        <div>
-                            <p>Intel Xeon E5-2670 v3 3.1 ГГц</p>
-                            <p>Intel Xeon E5-2630 v3 3.2 ГГц</p>
+                     <div class="vps__advantages-items">
+                        <div class="vps__advantages-item">
+                            <img src="./../../img/vps/icons/CloudArrowUp.png" alt="cloud"/>
+                        </div>
+                        <span class="line"></span>
+                        <div class="vps__advantages-item">
+                            <h4>Пропускная способность</h4>
+                            <span>Лучшая коннективность к провайдерам среди датацентров Беларуси. Безлимитный трафик на скоростях от 50 до 500 мегабит в секунду.</span>
                         </div>
                     </div>
-                    <span class="line"></span>
-                    <div class="vps__advantages-item">
-                        <h4>Мощные процессоры</h4>
-                        <span>Используем высокочастотные процессоры</span>
-                    </div>
                 </div>
-                <div class="vps__advantages-items">
-                    <div class="vps__advantages-item">
-                        <img src="./../../img/vps/icons/Circuitry.svg" alt="circuitry">
-                        <div>
-                            <p>Intel Xeon E5-2670 v3 3.1 ГГц</p>
-                            <p>Intel Xeon E5-2630 v3 3.2 ГГц</p>
+                <div class="vps__advantages-row">
+                    <div class="vps__advantages-items">
+                        <div class="vps__advantages-item">
+                            <img src="./../../img/vps/icons/Database.png" alt="Database">
+                            <div>
+                                <p>Чтение до 550 Мбайт/с</p>
+                                <p>Запись до 520 Мбайт/с</p>
+                            </div>
+                        </div>
+                        <span class="line"></span>
+                        <div class="vps__advantages-item">
+                            <h4>Быстрые диски</h4>
+                            <span>Скорость записи SATA SSD дисков</span>
                         </div>
                     </div>
-                    <span class="line"></span>
-                    <div class="vps__advantages-item">
-                        <h4>Мощные процессоры</h4>
-                        <span>Используем высокочастотные процессоры</span>
-                    </div>
-                </div>
-
-            </div>
-            <div class="vps__advantages-column">
-                <div class="vps__advantages-items">
-                    <div class="vps__advantages-item">
-                        <img src="./../../img/vps/icons/Circuitry.svg" alt="circuitry">
-                        <div>
-                            <p>Intel Xeon E5-2670 v3 3.1 ГГц</p>
-                            <p>Intel Xeon E5-2630 v3 3.2 ГГц</p>
+                    <div class="vps__advantages-items">
+                        <div class="vps__advantages-item">
+                            <img src="./../../img/vps/icons/ShieldChevron.png" alt="ShieldChevron"/>
+                        </div>
+                        <span class="line"></span>
+                        <div class="vps__advantages-item">
+                            <h4>Защита данных</h4>
+                            <span>Серверы сертифицированы и отвечают всем требованиям по защите данных.</span>
                         </div>
                     </div>
-                    <span class="line"></span>
-                    <div class="vps__advantages-item">
-                        <h4>Мощные процессоры</h4>
-                        <span>Используем высокочастотные процессоры</span>
-                    </div>
                 </div>
-                <div class="vps__advantages-items">
-                    <div class="vps__advantages-item">
-                        <img src="./../../img/vps/icons/Circuitry.svg" alt="circuitry">
-                        <div>
-                            <p>Intel Xeon E5-2670 v3 3.1 ГГц</p>
-                            <p>Intel Xeon E5-2630 v3 3.2 ГГц</p>
+                <div class="vps__advantages-row">
+                    <div class="vps__advantages-items">
+                        <div class="vps__advantages-item">
+                            <img src="./../../img/vps/icons/LockLaminated.png" alt="lockLaminated">
+                        </div>
+                        <span class="line"></span>
+                        <div class="vps__advantages-item">
+                            <h4>Безопасность</h4>
+                            <span>Наши серверы защищены от внешних угроз, а также предоставляют возможность настройки дополнительных средств безопасности.</span>
                         </div>
                     </div>
-                    <span class="line"></span>
-                    <div class="vps__advantages-item">
-                        <h4>Мощные процессоры</h4>
-                        <span>Используем высокочастотные процессоры</span>
-                    </div>
-                </div>
-                <div class="vps__advantages-items">
-                    <div class="vps__advantages-item">
-                        <img src="./../../img/vps/icons/Circuitry.svg" alt="circuitry">
-                        <div>
-                            <p>Intel Xeon E5-2670 v3 3.1 ГГц</p>
-                            <p>Intel Xeon E5-2630 v3 3.2 ГГц</p>
+                    <div class="vps__advantages-items">
+                        <div class="vps__advantages-item">
+                            <img src="./../../img/vps/icons/Headset.png" alt="Headset"/>
+                        </div>
+                        <span class="line"></span>
+                        <div class="vps__advantages-item">
+                            <h4>Круглосуточная поддержка</h4>
+                            <span>Наша техническая поддержка работает 24/7
+и готова помочь вам с любыми вопросами.</span>
                         </div>
                     </div>
-                    <span class="line"></span>
-                    <div class="vps__advantages-item">
-                        <h4>Мощные процессоры</h4>
-                        <span>Используем высокочастотные процессоры</span>
-                    </div>
                 </div>
-
             </div>
         </div>
-        <a href="#vps-calculator" class="custom-button-brand custom-button-brand_brand">Собрать кастомный VPS
+
+        <a href="#vps-calculator" class="custom-button-brand custom-button-brand_brand vps__advantages-btn">Собрать кастомный VPS
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                 <path d="M17.5383 10.6633L11.9133 16.2883C11.7372 16.4644 11.4983 16.5634 11.2492 16.5634C11.0001 16.5634 10.7613 16.4644 10.5852 16.2883C10.409 16.1122 10.3101 15.8733 10.3101 15.6242C10.3101 15.3752 10.409 15.1363 10.5852 14.9602L14.6094 10.9375H3.125C2.87636 10.9375 2.6379 10.8387 2.46209 10.6629C2.28627 10.4871 2.1875 10.2487 2.1875 10C2.1875 9.75137 2.28627 9.51292 2.46209 9.3371C2.6379 9.16129 2.87636 9.06252 3.125 9.06252H14.6094L10.5867 5.03751C10.4106 4.86139 10.3117 4.62252 10.3117 4.37345C10.3117 4.12438 10.4106 3.88551 10.5867 3.70939C10.7628 3.53327 11.0017 3.43433 11.2508 3.43433C11.4999 3.43433 11.7387 3.53327 11.9148 3.70939L17.5398 9.33439C17.6273 9.4216 17.6966 9.52523 17.7438 9.63931C17.7911 9.75339 17.8153 9.87569 17.8152 9.99917C17.815 10.1226 17.7905 10.2449 17.743 10.3589C17.6955 10.4728 17.6259 10.5763 17.5383 10.6633Z"
                       fill="white" fill-opacity="0.9"/>
