--- a/#src/components/vps/_partners.html
+++ b/#src/components/vps/_partners.html
@@ -1,19 +1,19 @@
 <div class="vps__partners container">
     <div class="swiper">
         <div class="swiper-wrapper">
-            <div style="background-image: url('./../../img/partners/9.png')"></div>
-            <div style="background-image: url('./../../img/partners/1.png')"></div>
-            <div style="background-image: url('./../../img/partners/2.png')"></div>
-            <div style="background-image: url('./../../img/partners/10.png')"></div>
-            <div style="background-image: url('./../../img/partners/3.png')"></div>
-            <div style="background-image: url('./../../img/partners/4.png')"></div>
-            <div style="background-image: url('./../../img/partners/5.png')"></div>
-            <div style="background-image: url('./../../img/partners/6.png')"></div>
-            <div style="background-image: url('./../../img/partners/8.png')"></div>
-            <div style="background-image: url('./../../img/partners/11.png')"></div>
-            <div style="background-image: url('./../../img/partners/7.png')"></div>
-            <div style="background-image: url('./../../img/partners/12.png')"></div>
-            <div style="background-image: url('./../../img/partners/13.png')"></div>
+            <img src="./../../img/partners/01j.png" alt="ivi">
+            <img src="./../../img/partners/02j.png" alt="hd-rex">
+            <img src="./../../img/partners/03j.png" alt="delivio">
+            <img src="./../../img/partners/04j.png" alt="melbicom">
+            <img src="./../../img/partners/05j.png" alt="hoster.by">
+            <img src="./../../img/partners/06j.png" alt="ntec">
+            <img src="./../../img/partners/07j.png" alt="a1">
+            <img src="./../../img/partners/08j.png" alt="besthost">
+            <img src="./../../img/partners/09j.png" alt="excloud">
+            <img src="./../../img/partners/10j.png" alt="unet.by">
+            <img src="./../../img/partners/11j.png" alt="toloka">
+            <img src="./../../img/partners/12j.png" alt="belags">
+            <img src="./../../img/partners/13j.png" alt="iptelcom">
 
         </div>
     </div>
