--- a/#src/components/vps/_promo.html
+++ b/#src/components/vps/_promo.html
@@ -4,16 +4,16 @@
     </h1>
     <p>Выделенный
         <span>
-            <img src="./../../img/vps/HardDrives.svg" alt="icon">
+            <img src="./../../img/vps/icons/HardDrives.png" alt="icon">
             <strong>VPS сервер</strong></span>
         по доступной цене для стабильных и производительных
         <span>
-            <img src="./../../img/vps/Browsers.svg" alt="icon">
+            <img src="./../../img/vps/icons/Browsers.png" alt="icon">
             <strong>Веб-сайтов</strong>
         </span>,<br/>
         приложений и тестовых сред в
         <span>
-            <img src="./../../img/vps/ComputerTower.svg" alt="icon">
+            <img src="./../../img/vps/icons/ComputerTower.png" alt="icon">
             <strong>Дата-центре</strong>
         </span>
     </p>
