--- a/#src/scss/components/vps/vps.scss
+++ b/#src/scss/components/vps/vps.scss
@@ -33,7 +33,7 @@
         @include font($weight: 600, $size: 70px, $height: 100%);
       }
 
-      @media (max-width:640px) {
+      @media (max-width: 640px) {
         @include font($weight: 600, $size: 40px, $height: 100%);
       }
     }
@@ -116,14 +116,14 @@
       @media (max-width: 1024px) {
         justify-content: center;
 
-          &:after{
-            content: '';
-            display: block;
-            flex-basis: 45%;
-            height: 52px;
-          }
+        &:after {
+          content: '';
+          display: block;
+          flex-basis: 45%;
+          height: 52px;
+        }
 
-        & > *{
+        & > * {
           flex-basis: 45%;
         }
       }
@@ -133,11 +133,10 @@
         flex-direction: column;
         flex-wrap: nowrap;
 
-        & > *{
+        & > * {
           flex-basis: 100%;
         }
       }
-
 
 
       &.background {
@@ -147,7 +146,7 @@
         padding: 16px;
 
         @media (max-width: 1024px) {
-         justify-content: center;
+          justify-content: center;
         }
 
         @media (max-width: 640px) {
@@ -166,9 +165,26 @@
     background-position: center right;
     background-size: contain;
 
+    &-btn {
+      margin-top: 60px;
+      align-self: center;
+    }
+
     &-section {
       margin: 60px 0;
       width: 100%;
+      display: flex;
+      flex-direction: column;
+
+    }
+
+    &-block {
+      display: flex;
+      flex-direction: column;
+      gap: 64px;
+    }
+
+    &-row {
       display: flex;
       gap: 64px;
 
@@ -177,17 +193,12 @@
       }
     }
 
-    &-column {
-      display: flex;
-      flex-direction: column;
-      gap: 64px;
-      flex-basis: 50%;
-    }
-
     &-items {
       display: flex;
       flex-direction: column;
+      flex-basis: 50%;
       gap: 24px;
+      height: 189px;
 
       & > .line {
         display: inline-block;
@@ -199,31 +210,34 @@
 
     &-item {
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       justify-content: space-between;
+      gap: 20px;
 
 
       & > h4 {
         color: #1A1A1A;
         @include font($weight: 400, $size: 28px, $height: 100%);
         letter-spacing: -0.56px;
+        flex-shrink: 0;
       }
 
       & > span {
         color: #808080;
         @include font($weight: 400, $size: 16px, $height: 20px);
         letter-spacing: -0.32px;
+        text-align: left;
       }
 
       @media (max-width: 640px) {
-        &:last-child{
+        &:last-child {
           flex-direction: column;
           align-items: flex-start;
         }
       }
 
 
-      & > div {
+      & > div:last-child {
         display: flex;
         flex-direction: column;
         gap: 4px;
@@ -255,11 +269,11 @@
       gap: 24px;
 
       @media (max-width: 1024px) {
-       justify-content: center;
+        justify-content: center;
       }
 
       @media (max-width: 768px) {
-       gap:16px;
+        gap: 16px;
       }
 
 
