--- a/#src/scss/base/accordion.scss
+++ b/#src/scss/base/accordion.scss
@@ -1,4 +1,5 @@
 .accordion {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,33 +20,38 @@
     padding: 6px 12px;
     justify-content: center;
     align-items: center;
-    border-radius: 32px;
+    gap: 4px;
+    border-radius: 12px;
     border: 1px solid rgba(255, 255, 255, 0.30);
     background:  #FFF;
     box-shadow: 0 0 16px 4px rgba(0, 0, 0, 0.10) inset;
-    //position: relative;
-    //padding: 15px;
-    //user-select: none;
-    //font-size: 1.8rem;
-    //cursor: pointer;
-    //
-    //@media (max-width: 420px) {
-    //  padding: 10px;
-    //}
-    //
-    //&::after {
-    //  content: "";
-    //  background-image: url("../img/icons/Vector1.svg");
-    //  background-repeat: no-repeat;
-    //  background-position: center;
-    //  height: 16px;
-    //  width: 16px;
-    //  display: inline-block;
-    //  vertical-align: middle;
-    //}
+    @include font($weight: 700, $size: 16px, $height: 20px);
+    color: rgba(0, 0, 0, 0.90);
+    text-align: center;
+    letter-spacing: -0.32px;
+
+    & > span{
+      display: flex;
+      align-items: center;
+    }
+
+    &.active{
+      border: 1px solid rgba(100, 122, 141, 0.30);
+      background:  #1A1A1A;
+      box-shadow: 0px -4px 4px 0px rgba(255, 255, 255, 0.05) inset;
+      color: rgba(255, 255, 255, 0.90);
+      transition: all 0.2s;
+
+      & > span{
+        transform: rotate(-180deg);
+        color: white;
+      }
+    }
+
   }
 
   .accordion__body {
+    width: 100%;
     max-height: 0;
     overflow: hidden;
     @extend %transition;
@@ -55,17 +61,24 @@
     }
 
     &_open{
-      max-height: 160px;
+      max-height: max-content;
       padding: 10px 0;
     }
 
     li {
-      padding: 7px;
+      padding: 13px;
       text-align: center;
+      border-top: 1px solid rgba(0, 0, 0, 0.10);
+
+      &:last-child{
+        border-bottom: 1px solid rgba(0, 0, 0, 0.10);
+      }
 
       a {
-        color: $color-dark;
-        font-weight: 700;
+        @include font($weight: 700, $size: 16px, $height: 20px);
+        color: rgba(0, 0, 0, 0.90);
+        text-align: center;
+        letter-spacing: -0.32px;
       }
     }
   }
