--- a/#src/scss/base/custom-select.scss
+++ b/#src/scss/base/custom-select.scss
@@ -55,10 +55,10 @@
   left: 0;
   width: 100%;
   height: 200px;
-  background: #E9EAF5;
+  background:  #FFFFFF;
   overflow-y: auto;
-  border: 1px solid #1914FE;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+  border: 1px solid rgba(0, 0, 0, 5%);
+  box-shadow: 0 0 16px 4px rgba(0, 0, 0, 10%) inset;
   display: none;
   flex-direction: column;
   z-index: 1000;
