refactor: change styles

--- a/#src/components/info/_newpartners.html
+++ b/#src/components/info/_newpartners.html
@@ -36,134 +36,9 @@
                 <div class="close-icon" id="close-icon-partners">
                     <span class="close"></span>
                 </div>
-                <div class="swipe-line" id="partners-swipe-line" data-swipe-threshold="20" data-swipe-timeout="500"
-                     data-swipe-ignore="false">
+                <div class="form">
+                    <script>!function(a,m,o,c,r,m){a[o+c]=a[o+c]||{setMeta:function(p){this.params=(this.params||[]).concat([p])}},a[o+r]=a[o+r]||function(f){a[o+r].f=(a[o+r].f||[]).concat([f])},a[o+r]({id:"1365170",hash:"46d7527d68d1b4fca1eed71e3bcc0a5c",locale:"ru"}),a[o+m]=a[o+m]||function(f,k){a[o+m].f=(a[o+m].f||[]).concat([[f,k]])}}(window,0,"amo_forms_","params","load","loaded");</script><script id="amoforms_script_1365170" async="async" charset="utf-8" src="https://forms.amocrm.ru/forms/assets/js/amoforms.js?1719303542"></script>
                 </div>
-                <form name="sampleForm" method="POST"
-                      action="//office.datahata.by/Products/CRM/HttpHandlers/webtoleadfromhandler.ashx"
-                      accept-charset="UTF-8" class="form">
-                    <meta content="text/html;charset=UTF-8" http-equiv="content-type">
-                    <h4 class="form__title">Заявка на партнёрскую программу</h4>
-                    <div id="sampleFormPanel">
-                        <input type="hidden" name="is_company" value="false">
-                        <div class="form__input">
-                            <p class="requiredField">Имя:</p>
-                            <input name="firstName" type="text">
-                        </div>
-
-                        <div class="form__input">
-                            <p> Фамилия:</p>
-                            <input name="lastName" type="text">
-                        </div>
-
-                        <div class="form__input">
-                            <p>Название компании:</p>
-                            <input name="companyName" type="text">
-                        </div>
-
-                        <div class="form__input">
-                            <p> Телефон:</p>
-                            <input name="contactInfo_Phone_1" type="text" id="phoneInput">
-                        </div>
-
-                        <div class="form__input">
-                            <p class="requiredField"> Еmail:</p>
-                            <input name="contactInfo_Email_1" type="email">
-                        </div>
-                        <div class="g-recaptcha" data-sitekey="6LeEdiApAAAAAKLbxYSrlRC-mpN-9-dhUHLI4QKW"></div>
-
-                        <input name="" value="Отправить данные" type="submit" class="button button_colored send__btn"
-                               onclick="javascript:
-                                   var isValid = true,
-                                   form = document.getElementById('sampleFormPanel'),
-                                   childs = form.getElementsByTagName('input'),
-                                   isCompany = null,
-                                   firstName = '',
-                                   lastName = '',
-                                   companyName = '',
-                                   fieldName = '',
-								   email = '',
-								   phone = '';
-								   for (var i = 0, n = childs.length; i < n; i++) {
-									   fieldName = childs[i].getAttribute('name');
-									   switch (fieldName) {
-										   case 'is_company': isCompany = childs[i].value.trim();
-										   break;
-										   case 'firstName': firstName = childs[i].value.trim();
-										   break;
-										   case 'lastName': lastName = childs[i].value.trim();
-										   break;
-										   case 'companyName': companyName = childs[i].value.trim();
-										   break;
-										    case 'contactInfo_Email_1': email = childs[i].value.trim();
-										   break;
-										   case 'contactInfo_Phone_1': phone = childs[i].value.trim();
-										   break;
-									   }
-								   }
-								   var recaptchaResponse = grecaptcha.getResponse();
-                                     if (recaptchaResponse.length === 0) {
-
-                                        if (typeof (toastr) === 'object' && typeof (toastr.error) === 'function') {
-                                                 toastr.error('Пожалуйста, пройдите проверку reCAPTCHA');
-                                        } else {
-                                                alert('Пожалуйста, пройдите проверку reCAPTCHA');
-                                        }
-                                            isValid = false;
-                                    }
-								   if (isCompany === 'false') {
-									   if (firstName === ''){
-										   if(typeof (toastr) === 'object' &amp;&amp; typeof (toastr.error) === 'function') toastr.error('Введите имя');
-										   else {addErrorClass('firstName')}
-										   isValid = false;
-									   }
-									   if(email === ''){
-										    if(typeof (toastr) === 'object' &amp;&amp; typeof (toastr.error) === 'function') toastr.error('Введите email');
-										   else {addErrorClass('contactInfo_Email_1')}
-
-										   isValid = false;
-									   } else if(!/^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,8})+$/.test(email)){
-										    if(typeof (toastr) === 'object' &amp;&amp; typeof (toastr.error) === 'function') toastr.error('Некорректный email');
-										   else {addErrorClass('contactInfo_Email_1')}
-										   isValid = false;
-									   }
-									   if(phone !== '' && !validatePhoneNumber(phone)){
-										      if(typeof (toastr) === 'object' &amp;&amp; typeof (toastr.error) === 'function') toastr.error('Некорректный номер');
-										   else {addErrorClass('phone');}
-										   isValid = false;
-									   }
-									   if(validatePhoneNumber(phone)){
-										   formatPhoneNumber(phone)
-									   }
-
-								   } else if (isCompany == 'true') {
-									   if(companyName == '') { if(typeof (toastr) === 'object' &amp;&amp; typeof (toastr.error) === 'function') toastr.error('Введите название компании');
-										   else alert('Введите название компании');
-										   isValid = false; }
-								   } else {
-									   isValid = false;
-								   }
-
-								    if(isValid){
-										    document.body.classList.remove('active-body');
-                                            document.querySelector('.new-partners__overlay').classList.remove('new-partners__overlay_active');
-											localStorage.setItem('referrer', window.location.href);
-								    } else {
-										alert('Проверьте правильность вводимых данных...')
-								    }
-								        return isValid;
-">
-                    </div>
-                    <input type="hidden" name="tag" value="Потенциальный клиент">
-                    <input type="hidden" name="return_url" value="https://www.datahata.by/">
-                    <input
-                            type="hidden" name="web_form_key" value="c8190c86-cc9c-43db-881e-7f6fb92197d5"><input
-                        type="hidden" name="notify_list" value="cf3c516b-ca44-4a7e-8cb8-65b346220173"><input
-                        type="hidden" name="managers_list" value="cf3c516b-ca44-4a7e-8cb8-65b346220173"><input
-                        type="hidden" name="share_type" value="0">
-                </form>
-
-
             </div>
         </div>
     </div>
