--- a/#src/components/vps/_form.html
+++ b/#src/components/vps/_form.html
@@ -1,7 +1,7 @@
 <section class="vps__form">
     <div class="container vps__section">
         <h2>Нужна консультация <br> <span>перед заказом?</span></h2>
-        <p>Мы поможем вам найти оптимальное решение.
+        <p>Мы поможем вам найти оптимальное решение.<br/>
             Оставьте заявку, и наш эксперт свяжется с вами в удобное время для обсуждения.
         </p>
         <script>!function (a, m, o, c, r, m) {
