--- a/#src/scss/base/custom-accordion.scss
+++ b/#src/scss/base/custom-accordion.scss
@@ -19,7 +19,7 @@
   align-items: center;
   gap: 14.9rem;
   color: rgba(0, 0, 0, 0.30);
-  @include font($weight: 600, $size: 48px, $height: 48px);
+  @include font($weight: 600, $size: 32px, $height: 48px);
   letter-spacing: -0.8px;
   text-align: left;
   padding: 34px 0;
@@ -53,7 +53,7 @@
   text-align: center;
   width: 40px;
   height: 40px;
-  background-image: url('./../../img/icons/Plus.svg');
+  background-image: url('../img/icons/Plus.svg');
   background-repeat: no-repeat;
   background-position: center;
   border-radius: 12px;
@@ -119,7 +119,7 @@
   text-align: center;
   width: 40px;
   height: 40px;
-  background-image: url('./../../img/icons/Minus.svg');
+  background-image: url('../img/icons/Minus.svg');
   background-repeat: no-repeat;
   background-position: center;
   border-radius: 12px;
