--- a/#src/scss/components/hatamail/promo.scss
+++ b/#src/scss/components/hatamail/promo.scss
@@ -10,7 +10,7 @@
 }
 
 .hm-promo__container {
-  padding: 3.6rem 0 0;
+  padding-top: 36px;
   display: flex;
   flex-direction: column;
   align-items: center;
