--- a/#src/scss/base/custom-select.scss
+++ b/#src/scss/base/custom-select.scss
@@ -1,13 +1,9 @@
 .custom-select-container {
   position: relative;
-  width: 376px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 8px;
-
-  @media (max-width: 640px) {
-    width: 296px;
-  }
 
   & > label{
     display: flex;
