--- a/#src/scss/base/custom-tabs.scss
+++ b/#src/scss/base/custom-tabs.scss
@@ -2,11 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-  width: 376px;
-
-  @media (max-width: 640px) {
-    width: 296px;
-  }
+  width: 100%;
 
   &__container {
     width: 100%;
