fix: fix var and font

--- a/#src/scss/base/buttons.scss
+++ b/#src/scss/base/buttons.scss
@@ -126,7 +126,7 @@
       color: rgba(255, 255, 255, 0.90);
 
       &:hover {
-        background: #130FBF;
+        background: $brand-l;
       }
     }
 
