--- a/#src/scss/base/custom-range.scss
+++ b/#src/scss/base/custom-range.scss
@@ -64,7 +64,7 @@
         display: block;
         width: 0;
         height: 3px;
-        background-color: #1914fe;
+        background-color: $Surface-Gray-Shades-Brand-M;
       }
     }
 
@@ -83,7 +83,7 @@
         height: 18px;
         border-radius: 50%;
         cursor: pointer;
-        background-color: #1914fe;
+        background-color: $Surface-Gray-Shades-Brand-M;
         outline: none;
       }
 
@@ -92,7 +92,7 @@
         width: 18px;
         height: 18px;
         border-radius: 50%;
-        background-color: #1914fe;
+        background-color: $Surface-Gray-Shades-Brand-M;
         cursor: pointer;
         outline: none;
       }
