--- a/#src/scss/base/fonts.scss
+++ b/#src/scss/base/fonts.scss
@@ -2,4 +2,4 @@
 @include font-style("futura-pt", "futura-pt-book", "400", "normal");
 @include font-style("inter", "Inter-Regular", "400", "normal");
 @include font-style("inter", "Inter-SemiBold", "600", "normal");
-@include font-style("inter", "Inter-Black", "900", "normal");
+@include font-style("inter", "Inter-Bold", "900", "normal");
